fix: global styles

--- a/apps/web/src/styles/variables.css
+++ b/apps/web/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   /* Brand Colors */
-  --color-primary: #252548;
+  --color-primary: #579aff;
 
   /* Background Colors */
   --color-bg-white: #ffffff;
