--- a/apps/web/src/components/Inputs/FighterSelectorInput/style.module.css
+++ b/apps/web/src/components/Inputs/FighterSelectorInput/style.module.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
 
+  .label {
+    margin-bottom: 8px;
+  }
+
   .fighterSelector {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
