--- a/apps/web/src/components/Typography/style.module.css
+++ b/apps/web/src/components/Typography/style.module.css
@@ -1,8 +1,3 @@
-.baseText {
-  font-size: 14px;
-  line-height: 1.4;
-}
-
 ._black {
   color: var(--color-gray800);
 }
@@ -13,6 +8,10 @@
 
 ._gray {
   color: var(--color-gray400);
+}
+
+._darkGray {
+  color: var(--color-gray600);
 }
 
 ._red {
