--- a/apps/web/src/styles/variables.css
+++ b/apps/web/src/styles/variables.css
@@ -31,6 +31,7 @@
   --color-gray700: #2d3748;
   --color-gray800: #1a202c;
   --color-gray900: #171923;
+  --color-blue: #3681f3;
 
   /* Cyan shades */
   --color-cyanLight: #edfdfd;
