--- a/apps/web/src/components/Layouts/InnerLayout/style.module.css
+++ b/apps/web/src/components/Layouts/InnerLayout/style.module.css
@@ -27,7 +27,7 @@
     align-items: center;
     width: 100%;
     max-width: 500px;
-    padding: 60px 0 64px;
-    min-height: 100vh;
+    padding: 48px 0 0;
+    max-height: 100vh;
   }
 }
