--- a/apps/web/src/styles/variables.css
+++ b/apps/web/src/styles/variables.css
@@ -40,6 +40,6 @@
 
   --color-link: #228be6;
 
-  --color-win: #0000ff;
-  --color-lose: #ff0000;
+  --color-win: #ff0000;
+  --color-lose: #0000ff;
 }
