--- a/apps/web/src/features/analytics/components/TotalResultSummary/style.module.css
+++ b/apps/web/src/features/analytics/components/TotalResultSummary/style.module.css
@@ -1,28 +1,31 @@
-.matchUpResultListHeader {
+.matchUpResultCard {
   width: 100%;
-  padding: 0 16px;
-  background-color: var(--color-gray50);
+  padding: 8px 16px;
+  border-bottom: 1px solid var(--color-gray300);
   display: flex;
   justify-content: center;
 
-  .matchUpResultListHeaderContent {
+  .matchUpResultCardContent {
     width: 100%;
+
     display: grid;
     align-items: center;
     justify-content: center;
     justify-items: center;
+    grid-template-areas: myFighter opponentFighter result rate;
     grid-template-columns: 80px 80px 120px 60px;
     gap: 8px;
-    padding-block: 4px;
 
     .result {
       justify-self: flex-end;
-      padding-right: 8px;
     }
 
     .rate {
       justify-self: flex-end;
-      padding-right: 8px;
+    }
+
+    &:last-child {
+      border-bottom: none;
     }
   }
 }
