--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -2,8 +2,24 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
+  /* hide scrollbar */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 a {
@@ -16,12 +32,12 @@ a {
 *:after {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  font-family: 'YuGothic', sans-serif;
+  font-family: "YuGothic", sans-serif;
   clear: both;
 }
 
 .material-icons {
-  font-family: 'Material Icons';
+  font-family: "Material Icons";
 }
 
 h1,
@@ -30,11 +46,11 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'YuGothic', sans-serif;
+  font-family: "YuGothic", sans-serif;
 }
 
 p {
-  font-family: 'YuGothic', sans-serif;
+  font-family: "YuGothic", sans-serif;
   margin: 0;
 }
 
@@ -44,7 +60,7 @@ textarea {
   font-weight: 300;
   line-height: 18px;
   font-size: 14px;
-  font-family: 'YuGothic', sans-serif;
+  font-family: "YuGothic", sans-serif;
 }
 
 input {
